--- a/glossary.html
+++ b/glossary.html
@@ -14,8 +14,21 @@
 
 <body>
 	<h2>
-		Glossary
+	Web development Terms
 	</h2>
+	<h3>
+		Flex property
+	</h3>
+	<div class="first">
+		<img src="flex1.jpg">
+		<img src="flex2.jpg">
+		<img src="flex3.jpg">
+	</div>
+	<p>
+		the flex property is very essential for web development term as it 
+		provide the flexible length for its item.this makes display look
+		more attractive
+	</p>
 
 </body>
 </html>
