--- a/tutorials.html
+++ b/tutorials.html
@@ -6,11 +6,47 @@
 	</title>
 </head>
 <link rel="stylesheet" type="text/css" href="tutorials.css">
+	<h1>
+		ALPHA NEWS THE BELIEVE OF NATION
+		<img src="horse1.png">
+		<div class="search">
+			<input type="text" name="">
 
+	</h1>
+
+	<h2>
+		Tutorials for web development
+	</h2>
+	<h3>
+		Learn HTML
+	</h3>
 <body>
+<div class="first">
+	<iframe width="495" height="315" src="https://www.youtube.com/embed/bWPMSSsVdPk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<nav>
+		<iframe width="495" height="315" src="https://www.youtube.com/embed/hMxGhHNOkCU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</nav>	
+	<p>
+		<iframe width="505" height="315" src="https://www.youtube.com/embed/3JluqTojuME" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</p>
 
+</div>
+<h4>
+	Learn CSS
+</h4>
+<div class="second">
+	<iframe width="495" height="315" src="https://www.youtube.com/embed/0afZj1G0BIE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+	<nav>
+		<iframe width="500" height="315" src="https://www.youtube.com/embed/8x1mO1d6-4w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</nav>
+	<p>
+		<iframe width="510" height="315" src="https://www.youtube.com/embed/qKoajPPWpmo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</p>
 
-
+</div>
 </body>
+<footer>
+	alpha aplha aplha
+</footer>
 </html>
