--- a/jobs.html
+++ b/jobs.html
@@ -20,16 +20,21 @@
 <div class="first">
 	<h3>
 		online reporter
+	
+		the online reporting is the process where the content are distributed via internet service. the online reporting consist 
+		of collection of different images, videos, audio, text etc.
+		the online reporting. this has a impoetant role for web development. 
 	</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labo</p>
 	
 </div>
 <div class="sec">
 	<h4>
-		news editor
+		web page designer
+
+	this is another job where for a website it is more imortant 
+	the first look of the web page should be more attractive and intresting therefore for web page designer is important for web
+	development.
 	</h4>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 	
 </div>	
 
