--- a/team.html
+++ b/team.html
@@ -17,30 +17,24 @@
 	</h2>
 	<div class="first">
 		<img src="user3.png">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		Mr.raut excecutive of alpha news
 		
 	</div>
 	<div class="sec">
 		<img src="user3.png">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven
+		Miss.Dahal managing director of alpha news.
 	</div>
 	<div class="third">
 		<img src="user3.png">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven
+		Miss pandey web designer of alpha news.
 	</div>
 	<div class="last">
 		<img src="user3.png">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven
-
+		Mr pandit online reporter of alpha news.
 	</div>
 	<div class="fifth">
 			<img src="user3.png">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven
+		Mr bhattrai. Online text editor of alpha news.
 	</div>
 
 </body>
