--- a/reviews.html
+++ b/reviews.html
@@ -25,19 +25,16 @@
 
 <div class="sec">
 	<h4>Staff B</h4>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	this alpha news website is a new era of website that provides a 
+	user to know about every aspects or activities running in the world.
+	it could be either news or sports or any thing this web site give proper information.
 </div>
 <div class="third">
 		<h3>Staff A</h3>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	 cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		Alpha news website not just only provide information about the ongoing
+		happening but it also shows the tutorial all the web terms for its user 
+		this has create a friendly environment for those who are willing to know more 
+		about web development. 
 
 </div>
 
