--- a/glossary.html
+++ b/glossary.html
@@ -6,12 +6,31 @@
 <link rel="stylesheet" type="text/css" href="glossary.css">
 <h1>
 		ALPHA NEWS THE BELIEVE OF NATION
-		<img src="horse1.png">
+		<div class="image">
+			<img src="horse1.png">
+		</div>
+		
 		<div class="search">
 			<input type="text" name="">
 
 	</h1>
+	<div class="first">
+			<ul>
+			<li><a href="#">Home</a>
+			 	<ul class="menu">
+			 		<li><a href="bio.html">Bio </a></li>
+			 		<li><a href="team.html">Department </a></li>
+			 	</ul>
 
+			</li>
+			<li><a href="reviews.html">Reviews</a></li>
+			<li><a href="glossary.html">Glossary</a></li>
+			<li><a href="jobs.html">Jobs</a></li>
+			<li><a href="tutorials.html">Tutorials</a></li>
+
+			</ul>
+			
+	</div>
 <body>
 	<h2>
 	Web development Terms
@@ -19,7 +38,7 @@
 	<h3>
 		Flex property
 	</h3>
-	<div class="first">
+	<div class="fir">
 		<img src="flex1.jpg">
 		<img src="flex2.jpg">
 		<img src="flex3.jpg">
@@ -28,6 +47,20 @@
 		the flex property is very essential for web development term as it 
 		provide the flexible length for its item.this makes display look
 		more attractive
+	</p>
+	
+	<h4>
+		Transitions
+	</h4>
+	<div class="sec">
+		<img src="transition.png">
+		<img src="transition1.png">
+
+	</div>
+	<p>
+		the transition property is another essiential property for web development
+		where the property enables to change from one to another state.this allow a
+		web page to be more attractive.
 	</p>
 
 </body>
