--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 	</title>
 	<h1>
 		ALPHA NEWS THE BELIEVE OF NATION
-		<img src="horse1.png">
+		<div class="image">
+			<img src="horse1.png">
+		</div>
+		
 		<div class="search">
-			<input type="text" name="">
+			<input type="text" name=""></div>
 
 	</h1>
 </head>
@@ -72,12 +75,10 @@
 		<h4>
 			ADVERTISEMENT
 		</h4>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		This site provide platform for all the sponser for their local advertisement. And also for the company who are looking for their 
+		product to be avertise in minimum rate. please contact alpha news for the better advertisement facilites.
+		Thank you.
+		contact NO: 9818567370 
 	</div>
 
 	<nav class="end">
