--- a/jobs.html
+++ b/jobs.html
@@ -5,11 +5,31 @@
 	<link rel="stylesheet" type="text/css" href="jobs.css">
 	<h1>
 		ALPHA NEWS THE BELIEVE OF NATION
-		<img src="horse1.png">
+		<div class="image">
+			<img src="horse1.png">
+		</div>
+		
 		<div class="search">
 			<input type="text" name="">
 
 </h1>
+	<div class="first">
+			<ul>
+			<li><a href="#">Home</a>
+			 	<ul class="menu">
+			 		<li><a href="bio.html">Bio </a></li>
+			 		<li><a href="team.html">Department </a></li>
+			 	</ul>
+
+			</li>
+			<li><a href="reviews.html">Reviews</a></li>
+			<li><a href="glossary.html">Glossary</a></li>
+			<li><a href="jobs.html">Jobs</a></li>
+			<li><a href="tutorials.html">Tutorials</a></li>
+
+			</ul>
+			
+	</div>
 </head>
 
 <h2>
@@ -36,9 +56,15 @@
 	development.
 	</h4>
 	
-</div>	
+</div>
+
+
 
 </div>
+
+
+
+
 <h5>
 	Apply JOb Here!!!
 </h5>
