--- a/reviews.html
+++ b/reviews.html
@@ -6,18 +6,38 @@
 <link rel="stylesheet" type="text/css" href="reviews.css">
 	<h1>
 		ALPHA NEWS THE BELIEVE OF NATION
-		<img src="horse1.png">
+		<div class="image">
+			<img src="horse1.png">
+		</div>
 		<div class="search">
 			<input type="text" name="">
 
 	</h1>
 <body>
+		<div class="first">
+			<ul>
+			<li><a href="#">Home</a>
+			 	<ul class="menu">
+			 		<li><a href="bio.html">Bio </a></li>
+			 		<li><a href="team.html">Department </a></li>
+			 	</ul>
+
+			</li>
+			<li><a href="reviews.html">Reviews</a></li>
+			<li><a href="glossary.html">Glossary</a></li>
+			<li><a href="jobs.html">Jobs</a></li>
+			<li><a href="tutorials.html">Tutorials</a></li>
+
+			</ul>
+			
+	</div>
+	<h2>
 
 	<h2>
 		Reviews of Alpha News
 	</h2>
 
-	<div class="first">
+	<div class="fir">
 	<h5>Audio Review</h5>
 	<audio src=""></audio>
 </div>
@@ -25,16 +45,16 @@
 
 <div class="sec">
 	<h4>Staff B</h4>
-	this alpha news website is a new era of website that provides a 
-	user to know about every aspects or activities running in the world.
-	it could be either news or sports or any thing this web site give proper information.
+	the major sources for its development is css where the different designing 
+	work are carried out. the html codes are enrolled and linked with css for the 
+	attractive and impresive design of web as per the interest of a user.
 </div>
 <div class="third">
 		<h3>Staff A</h3>
-		Alpha news website not just only provide information about the ongoing
-		happening but it also shows the tutorial all the web terms for its user 
-		this has create a friendly environment for those who are willing to know more 
-		about web development. 
+		Basically the web site is created with the major source called 
+		sublime text.this is important source for student where the html codes 
+		and the css codes are implemented as to create a website. the sublime text is easy to 
+		operate and easy to understand. 
 
 </div>
 
