--- a/team.html
+++ b/team.html
@@ -6,16 +6,36 @@
 <link rel="stylesheet" type="text/css" href="team.css">
 	<h1>
 		ALPHA NEWS THE BELIEVE OF NATION
-		<img src="horse1.png">
+		<div class="image">
+			<img src="horse1.png">
+		</div>
+		
 		<div class="search">
 			<input type="text" name="">
 
 	</h1>
+		<div class="first">
+			<ul>
+			<li><a href="#">Home</a>
+			 	<ul class="menu">
+			 		<li><a href="bio.html">Bio </a></li>
+			 		<li><a href="team.html">Department </a></li>
+			 	</ul>
+
+			</li>
+			<li><a href="reviews.html">Reviews</a></li>
+			<li><a href="glossary.html">Glossary</a></li>
+			<li><a href="jobs.html">Jobs</a></li>
+			<li><a href="tutorials.html">Tutorials</a></li>
+
+			</ul>
+			
+	</div>
 <body>
 	<h2>
 		Team Of Alpha News
 	</h2>
-	<div class="first">
+	<div class="fir">
 		<img src="user3.png">
 		Mr.raut excecutive of alpha news
 		
