--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 <head>
 	<title>
 		NEWS
@@ -81,14 +82,30 @@
 		contact NO: 9818567370 
 	</div>
 
-	<nav class="end">
-		Terms and conditions
-	</nav>
+	<div class="media">
+		
+		<section>
+			<a class="link" href ="facebook.html">
+			<i class="fab fa-facebook"></i>
+		</a>
+		<a class="link"   href="instagram.html">
+			<i class="fab fa-instagram"></i>
+		</a>
+		<a  class="link"  href="youtube.html">
+			<i class="fab fa-youtube"></i>
+		</a>
+			<a  class="link"  href="twitter.html">
+			<i class="fab fa-twitter"></i>
+		</a>
+
+		</section>
+		
+			
+
+		
+	</div>
 		
 
 		
-</footer>
-<p class="ending">
-			
-		</p>
+
 </html>
