--- a/glossary.html
+++ b/glossary.html
@@ -1,67 +1,69 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>glossary</title>
-</head>
-<link rel="stylesheet" type="text/css" href="glossary.css">
-<h1>
-		ALPHA NEWS THE BELIEVE OF NATION
-		<div class="image">
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<title>glossary</title>
+	</head>
+	<link rel="stylesheet" type="text/css" href="glossary.css"><!-- this is the link for the glossary.html with glossary.css-->
+	<h1>
+		ISAAC NEWS THE BELIEVE OF NATION
+		<div class="image"><!-- the image of the logo given in a class-->
 			<img src="horse1.png">
 		</div>
-		
-		<div class="search">
-			<input type="text" name="">
 
-	</h1>
-	<div class="first">
+		<div class="search<!--the input text box for search display-->
+
+		</h1>
+		<div class="first"><!-- this div represent the unorder list for the navigation bar--> 
 			<ul>
-			<li><a href="#">Home</a>
-			 	<ul class="menu">
-			 		<li><a href="bio.html">Bio </a></li>
-			 		<li><a href="team.html">Department </a></li>
-			 	</ul>
+				<li><a href="#">Home</a>
+					<ul class="menu">
+						<li><a href="bio.html">Bio </a></li>
+						<li><a href="team.html">Department </a></li>
+					</ul>
 
-			</li>
-			<li><a href="reviews.html">Reviews</a></li>
-			<li><a href="glossary.html">Glossary</a></li>
-			<li><a href="jobs.html">Jobs</a></li>
-			<li><a href="tutorials.html">Tutorials</a></li>
+				</li>
+				<li><a href="reviews.html">Reviews</a></li>
+				<li><a href="glossary.html">Glossary</a></li>
+				<li><a href="jobs.html">Jobs</a></li>
+				<li><a href="tutorials.html">Tutorials</a></li>
 
 			</ul>
-			
-	</div>
-<body>
-	<h2>
-	Web development Terms
-	</h2>
-	<h3>
-		Flex property
-	</h3>
-	<div class="fir">
-		<img src="flex1.jpg">
-		<img src="flex2.jpg">
-		<img src="flex3.jpg">
-	</div>
-	<p>
-		the flex property is very essential for web development term as it 
-		provide the flexible length for its item.this makes display look
-		more attractive
-	</p>
-	
-	<h4>
-		Transitions
-	</h4>
-	<div class="sec">
-		<img src="transition.png">
-		<img src="transition1.png">
 
-	</div>
-	<p>
-		the transition property is another essiential property for web development
-		where the property enables to change from one to another state.this allow a
-		web page to be more attractive.
-	</p>
+		</div>
+		<body>
+			<h2><!--header representation-->
+				Web development Terms
+			</h2>
+			<h3><!--header representation-->
+				Flex property
+			</h3>
+			<div class="fir">
+				<img src="flex1.jpg">
+				<img src="flex2.jpg">
+				<img src="flex3.jpg">
+			</div>
+			<p><!--contains discriptions -->
+				the flex property is very essential for web development term as it 
+				provide the flexible length for its item.this makes display look
+				more attractive
+			</p>
 
-</body>
-</html>
+			<h4><!--header representation-->
+				Transitions
+			</h4>
+			<div class="sec"><!--contains images -->
+				<img src="transition.png">
+				<img src="transition1.png">
+
+			</div>
+			<p><!--contains discriptions -->
+				the transition property is another essiential property for web development
+				where the property enables to change from one to another state.this allow a
+				web page to be more attractive.
+			</p>
+
+		</body>
+		<footer>
+			ISaac<!-- this footer only contain that is black colour background just for the a little bar show-->
+		</footer>
+		</html>
