--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<link rel="stylesheet" type="text/css" href="style.css"><!-- this is the link for the index html with style css-->
+<link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"><!--this is the link for the social media icon for this page linked with font awesome.com-->
 <head>
 	<title>
 		NEWS
 	</title>
 	<h1>
-		ALPHA NEWS THE BELIEVE OF NATION
+		ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
 		<div class="image">
-			<img src="horse1.png">
+			<img src="horse1.png"><!-- the image of the logo given in a class--> 
 		</div>
 		
-		<div class="search">
+		<div class="search"><!--the input text box for search display-->
 			<input type="text" name=""></div>
 
 	</h1>
 </head>
 <body> 
-	<div class="first">
+	<div class="first"><!-- this div represent the unorder list for the navigation bar--> 
 			<ul>
 			<li><a href="#">Home</a>
 			 	<ul class="menu">
@@ -35,10 +35,10 @@
 			</ul>
 			
 	</div>
-	<h2>
+	<h2><!--header for news highlights-->
 			HIGHLIGHTS!!!!
 		</h2>
-	<div class="sec">
+	<div class="sec"><!--this div sec represent the embeed videos of youtube -->
 		
 		<p>
 			<iframe width="494" height="315" src="https://www.youtube.com/embed/oa-udwGUkp8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -53,11 +53,11 @@
 		</section>
 	</div>
 
-	<h3> 
+	<h3> <!-- this is another heading represents sports-->
 			SPORTS!!!!
 		</h3>
 
-	<div class="third">
+	<div class="third"><!-- this class third represent the embeed video of youtube-->
 		
 		<p>
 			<iframe width="494" height="315" src="https://www.youtube.com/embed/UkL9l2FWIls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -72,7 +72,7 @@
 	</div>
 </body>
 <footer>
-	<div class="last">
+	<div class="last"><!--thiis class of div represent the information for advertisement-->
 		<h4>
 			ADVERTISEMENT
 		</h4>
@@ -82,7 +82,7 @@
 		contact NO: 9818567370 
 	</div>
 
-	<div class="media">
+	<div class="media"><!-- the class media have a link for the social medias icons-->  
 		
 		<section>
 			<a class="link" href ="facebook.html">
@@ -105,7 +105,7 @@
 		
 	</div>
 		
-
+</footer>
 		
 
 </html>
