--- a/jobs.html
+++ b/jobs.html
@@ -2,18 +2,18 @@
 <html>
 <head>
 	<title>jobs</title>
-	<link rel="stylesheet" type="text/css" href="jobs.css">
+	<link rel="stylesheet" type="text/css" href="jobs.css"><!-- this is the link for the jobs.html with jobs.css-->
 	<h1>
-		ALPHA NEWS THE BELIEVE OF NATION
+		ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
 		<div class="image">
-			<img src="horse1.png">
+			<img src="horse1.png"><!-- the image of the logo given in a class--> 
 		</div>
 		
 		<div class="search">
-			<input type="text" name="">
+			<input type="text" name=""><!--the input text box for search display-->
 
 </h1>
-	<div class="first">
+	<div class="first"><!-- this div represent the unorder list for the navigation bar--> 
 			<ul>
 			<li><a href="#">Home</a>
 			 	<ul class="menu">
@@ -36,9 +36,9 @@
 	Job Comparision
 </h2>
 <body>
-<div class="container">
-<div class="fir">
-	<h3>
+<div class="container"><!--this class container have the both the div that contain jobs comparisions-->
+<div class="fir"><!-- this fir class represent the wrrten element of jobs-->
+	<h3><!-- h3 conatins the discription --><!-- h4 conatins the discription -->
 		online reporter
 	
 		the online reporting is the process where the content are distributed via internet service. the online reporting consist 
@@ -47,8 +47,8 @@
 	</h3>
 	
 </div>
-<div class="sec">
-	<h4>
+<div class="sec"><!-- this sec class represent the wrrten element of jobs-->
+	<h4><!-- h4 conatins the discription -->
 		web page designer
 
 	this is another job where for a website it is more imortant 
@@ -65,10 +65,10 @@
 
 
 
-<h5>
+<h5><!-- another header for a new form-->
 	Apply JOb Here!!!
 </h5>
-<div class="third">
+<div class="third"><!-- this class third represent the form to aplly for jobs-->
 	
 	<form>
 		First name:<br>
@@ -91,7 +91,7 @@
 </div>
 
 </body>
-<footer>
-	Alpha alpha alpha
+<footer><!-- this footer only contain that is black colour background just for the a little bar show-->
+	ISAAC ISAAC
 </footer>
 </html>
