--- a/reviews.html
+++ b/reviews.html
@@ -1,67 +1,64 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>reviews</title>
-</head>
-<link rel="stylesheet" type="text/css" href="reviews.css">
-	<h1>
-		ALPHA NEWS THE BELIEVE OF NATION
-		<div class="image">
-			<img src="horse1.png">
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<title>reviews</title>
+	</head>
+	<link rel="stylesheet" type="text/css" href="reviews.css"><!-- this is the link for the reviews.html with reviews.css-->
+		<h1>
+			ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
+			<div class="image">
+				<img src="horse1.png"><!-- the image of the logo given in a class-->
+			</div>
+			<div class="search">
+				<input type="text" name=""><!--the input text box for search display-->
+
+
+		</h1>
+	<body>
+			<div class="first"><!-- this div represent the unorder list for the navigation bar-->
+				<ul>
+				<li><a href="#">Home</a>
+				 	<ul class="menu">
+				 		<li><a href="bio.html">Bio </a></li>
+				 		<li><a href="team.html">Department </a></li>
+				 	</ul>
+
+				</li>
+				<li><a href="reviews.html">Reviews</a></li>
+				<li><a href="glossary.html">Glossary</a></li>
+				<li><a href="jobs.html">Jobs</a></li>
+				<li><a href="tutorials.html">Tutorials</a></li>
+
+				</ul>
+				
 		</div>
-		<div class="search">
-			<input type="text" name="">
+		<h2>
 
-	</h1>
-<body>
-		<div class="first">
-			<ul>
-			<li><a href="#">Home</a>
-			 	<ul class="menu">
-			 		<li><a href="bio.html">Bio </a></li>
-			 		<li><a href="team.html">Department </a></li>
-			 	</ul>
+		<h2><!-- header representation-->
+			Reviews of ISAAC News
+		</h2>
 
-			</li>
-			<li><a href="reviews.html">Reviews</a></li>
-			<li><a href="glossary.html">Glossary</a></li>
-			<li><a href="jobs.html">Jobs</a></li>
-			<li><a href="tutorials.html">Tutorials</a></li>
 
-			</ul>
-			
+
+	<div class="sec"><!-- this class sec contain written element-->
+		<h4>person B</h4>
+		the major sources for its development is css where the different designing 
+		work are carried out. the html codes are enrolled and linked with css for the 
+		attractive and impresive design of web as per the interest of a user.
 	</div>
-	<h2>
+	<div class="third"><!--this class third contain written element-->
+			<h3>person A</h3>
+			Basically the web site is created with the major source called 
+			sublime text.this is important source for student where the html codes 
+			and the css codes are implemented as to create a website. the sublime text is easy to 
+			operate and easy to understand. 
 
-	<h2>
-		Reviews of Alpha News
-	</h2>
+	</div>
 
-	<div class="fir">
-	<h5>Audio Review</h5>
-	<audio src=""></audio>
-</div>
+		
 
-
-<div class="sec">
-	<h4>Staff B</h4>
-	the major sources for its development is css where the different designing 
-	work are carried out. the html codes are enrolled and linked with css for the 
-	attractive and impresive design of web as per the interest of a user.
-</div>
-<div class="third">
-		<h3>Staff A</h3>
-		Basically the web site is created with the major source called 
-		sublime text.this is important source for student where the html codes 
-		and the css codes are implemented as to create a website. the sublime text is easy to 
-		operate and easy to understand. 
-
-</div>
-
-	
-
-</body>
-<footer>
-	alpha aplpha 
-</footer>
-</html>
+	</body>
+	<footer>
+		ISAAC ISAAC<!-- this footer only contain that is black colour background just for the a little bar show-->
+	</footer>
+	</html>
