--- a/team.html
+++ b/team.html
@@ -1,64 +1,64 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>team</title>
-</head>
-<link rel="stylesheet" type="text/css" href="team.css">
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<title>team</title>
+	</head>
+	<link rel="stylesheet" type="text/css" href="team.css"><!-- this is the link for the team. html with team.css-->
 	<h1>
-		ALPHA NEWS THE BELIEVE OF NATION
+		ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
 		<div class="image">
-			<img src="horse1.png">
+			<img src="horse1.png"><!-- the image of the logo given in a class--> 
 		</div>
-		
+
 		<div class="search">
-			<input type="text" name="">
+			<input type="text" name=""><!--the input text box for search display-->
 
-	</h1>
-		<div class="first">
+		</h1>
+		<div class="first"><!-- this div represent the unorder list for the navigation bar-->
 			<ul>
-			<li><a href="#">Home</a>
-			 	<ul class="menu">
-			 		<li><a href="bio.html">Bio </a></li>
-			 		<li><a href="team.html">Department </a></li>
-			 	</ul>
+				<li><a href="#">Home</a>
+					<ul class="menu">
+						<li><a href="bio.html">Bio </a></li>
+						<li><a href="team.html">Department </a></li>
+					</ul>
 
-			</li>
-			<li><a href="reviews.html">Reviews</a></li>
-			<li><a href="glossary.html">Glossary</a></li>
-			<li><a href="jobs.html">Jobs</a></li>
-			<li><a href="tutorials.html">Tutorials</a></li>
+				</li>
+				<li><a href="reviews.html">Reviews</a></li>
+				<li><a href="glossary.html">Glossary</a></li>
+				<li><a href="jobs.html">Jobs</a></li>
+				<li><a href="tutorials.html">Tutorials</a></li>
 
 			</ul>
-			
-	</div>
-<body>
-	<h2>
-		Team Of Alpha News
-	</h2>
-	<div class="fir">
-		<img src="user3.png">
-		Mr.raut excecutive of alpha news
-		
-	</div>
-	<div class="sec">
-		<img src="user3.png">
-		Miss.Dahal managing director of alpha news.
-	</div>
-	<div class="third">
-		<img src="user3.png">
-		Miss pandey web designer of alpha news.
-	</div>
-	<div class="last">
-		<img src="user3.png">
-		Mr pandit online reporter of alpha news.
-	</div>
-	<div class="fifth">
-			<img src="user3.png">
-		Mr bhattrai. Online text editor of alpha news.
-	</div>
 
-</body>
-<footer>
-	alpha aplha plpajahahh
-</footer>
-</html>
+		</div>
+		<body>
+			<h2><!--header representation-->
+				Team Of ISAAC News
+			</h2>
+			<div class="fir"><!--the class fir contiain image and discription-->
+				<img src="user3.png">
+				Mr.raut excecutive of alpha news
+
+			</div>
+			<div class="sec"><!--the class sec contiain image and discription-->
+				<img src="user3.png">
+				Miss.Dahal managing director of alpha news.
+			</div>
+			<div class="third"><!--the class third contiain image and discription-->
+				<img src="user3.png">
+				Miss pandey web designer of alpha news.
+			</div>
+			<div class="last"><!--the class last contiain image and discription-->
+				<img src="user3.png">
+				Mr pandit online reporter of alpha news.
+			</div>
+			<div class="fifth"><!--the class fifth contiain image and discription-->
+				<img src="user3.png">
+				Mr bhattrai. Online text editor of alpha news.
+			</div>
+
+		</body>
+		<footer><!-- this footer only contain that is black colour background just for the a little bar show-->
+			isaac isaac
+		</footer>
+		</html>
