--- a/tutorials.html
+++ b/tutorials.html
@@ -5,19 +5,19 @@
 		Tutorials
 	</title>
 </head>
-<link rel="stylesheet" type="text/css" href="tutorials.css">
+<link rel="stylesheet" type="text/css" href="tutorials.css"><!-- this is the link for the tutorails.html with tutorials.css-->
 	<h1>
-		ALPHA NEWS THE BELIEVE OF NATION
+		ISAAC NEWS THE BELIEVE OF NATION<!--header of the page-->
 		<div class="image">
 			<img src="horse1.png">
 		</div>
 		
-		<div class="search">
+		<div class="search"><!--the input text box for search display-->
 			<input type="text" name="">
 
 	</h1>
 
-		<div class="first">
+		<div class="first"><!-- this div represent the unorder list for the navigation bar-->
 			<ul>
 			<li><a href="#">Home</a>
 			 	<ul class="menu">
@@ -35,14 +35,16 @@
 			
 	</div>
 
-	<h2>
+	<h2><!-- header representation-->
+
 		Tutorials for web development
 	</h2>
-	<h3>
+	<h3><!-- header representation-->
+
 		Learn HTML
 	</h3>
 <body>
-<div class="fir">
+<div class="fir"><!--this div fir represent the embeed videos of youtube -->
 	<iframe width="495" height="315" src="https://www.youtube.com/embed/bWPMSSsVdPk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<nav>
 		<iframe width="495" height="315" src="https://www.youtube.com/embed/hMxGhHNOkCU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -52,10 +54,11 @@
 	</p>
 
 </div>
-<h4>
+<h4><!-- header representation-->
+
 	Learn CSS
 </h4>
-<div class="second">
+<div class="second"><!--this div second represent the embeed videos of youtube -->
 	<iframe width="495" height="315" src="https://www.youtube.com/embed/0afZj1G0BIE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 	<nav>
@@ -68,6 +71,6 @@
 </div>
 </body>
 <footer>
-	alpha aplha aplha
+	ISAAC ISAAc<!-- this footer only contain that is displayed black colour background just for the a little bar show-->
 </footer>
 </html>
