--- a/glossary.html
+++ b/glossary.html
@@ -10,26 +10,33 @@
 			<img src="horse1.png">
 		</div>
 
-		<div class="search<!--the input text box for search display-->
+		<div class="search"><!--the input text box for search display-->
+			<input type="text" name=""></div>
+
 
 		</h1>
 		<div class="first"><!-- this div represent the unorder list for the navigation bar--> 
 			<ul>
-				<li><a href="#">Home</a>
-					<ul class="menu">
-						<li><a href="bio.html">Bio </a></li>
-						<li><a href="team.html">Department </a></li>
-					</ul>
+			<li><a href="#">Home</a>
+			 	<ul class="menu">
+			 		<li><a href="bio.html">Bio </a></li>
+			 		<li><a href="team.html">Department </a></li>
+			 	</ul>
 
-				</li>
-				<li><a href="reviews.html">Reviews</a></li>
-				<li><a href="glossary.html">Glossary</a></li>
-				<li><a href="jobs.html">Jobs</a></li>
-				<li><a href="tutorials.html">Tutorials</a></li>
+			</li>
+			<li><a href="reviews.html">Reviews</a></li>
+			<li><a href="glossary.html">Glossary</a></li>
+			<li><a href="jobs.html">Jobs</a></li>
+			<li><a href="tutorials.html">Tutorials</a></li>
 
 			</ul>
+			
+	</div>
 
-		</div>
+
+
+
+		
 		<body>
 			<h2><!--header representation-->
 				Web development Terms
