--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div class="sec"><!--this div sec represent the embeed videos of youtube -->
 		
 		<p>
-			<iframe width="494" height="315" src="https://www.youtube.com/embed/oa-udwGUkp8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe  width="494"= height="315" src="https://www.youtube.com/embed/oa-udwGUkp8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>></iframe>
 		</p>
 		<nav>
 			<iframe width="494" height="315" src="https://www.youtube.com/embed/fMRSCq1LvaY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
